Atcoder/ABC過去問/C/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/C/ABC157C.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/C/ABC157C.cpp:301:12: error: 'ctoi' was not declared in this scope; did you mean 'atoi'?
  301 |         if(ctoi(str[s[j]])!=c[j])break;
      |            ^~~~
      |            atoi
